--- a/sdi2-UO196582UO241016/public/widget-login.html
+++ b/sdi2-UO196582UO241016/public/widget-login.html
@@ -23,7 +23,7 @@
     window.history.pushState("", "", "/cliente.html?w=login");
     $("#boton-login").click(function () {
         $.ajax({
-            url: URLbase + "/signin",
+            url: URLbase + "/users",
             type: "POST",
             data: {
                 email: $("#email").val(),
