--- a/sdi2-UO196582UO241016/public/widget-friends.html
+++ b/sdi2-UO196582UO241016/public/widget-friends.html
@@ -1,7 +1,8 @@
 <div id="widget-friends">
+	<h2>Amigos</h2>
 	<input type="text" class="form-control"
-		placeholder="Filtrar por nombre" id="filtro-nombre" />
-	<table class="table table-hover">
+		placeholder="Filtrar por nombre" id="filtro-nombre" name="busqueda" />
+	<table class="table table-hover" id="tabla-amigos">
 		<thead>
 			<tr>
 				<th>Nombre</th>
@@ -61,7 +62,7 @@
             success: function (res) {
                 numberNotReadMessages = res.number;
                 $("#tablaCuerpo").append(
-                    "<tr id="+ friend._id +">" + "<td>"
+                    "<tr id="+ friend.nombre +">" + "<td>"
                     + friend.nombre + "</td>" + "<td>"
                     + friend.email + "</td>" + "<td>"
                     + numberNotReadMessages + "</td>" + "<td>"
